--- a/styles.css
+++ b/styles.css
@@ -291,4 +291,14 @@ footer {
   .banner_text {
     font-size: 2.2vw;
   }
+  
+  body {
+    overflow-x: hidden !important;
+  }
+  
+  .container {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
+  
 }
